# boltzman-generators

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MIGRATION.md  README.md  RELEASE.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml  release.yml
examples/: 03_cnf_flow_matching.ipynb
examples/notebooks/: 01_quickstart_realnvp.ipynb  02_reweighting_and_ess.ipynb  04_checkpoint_and_resume.ipynb  README.md
notebooks/: 02_realnvp_from_scratch.ipynb  03_bg_double_well.ipynb  04_bg_muller.ipynb  05_compare_with_paper_repo.ipynb  06_flow_matching_intro.ipynb  07_transferable_dipeptide.ipynb
src/bg/: __init__.py  losses.py  sampling.py
src/bg/energies/: __init__.py  dipeptide.py  double_well.py  muller.py
src/bg/flows/: __init__.py  base.py  cnf.py
src/boltzmann_generators/: __init__.py  analysis.py  io.py  losses.py  mcmc.py  sampling.py  train.py
src/boltzmann_generators/base/: __init__.py  density.py  energy.py
src/boltzmann_generators/energies/: dipeptide.py  double_well.py  muller.py
src/boltzmann_generators/extensions/: __init__.py  equivariant.py  molecular.py  transferable.py
src/boltzmann_generators/flows/: __init__.py  base.py  cnf.py  coupling.py  periodic.py  realnvp.py
src/boltzmann_generators/services/: __init__.py  analysis.py  checkpoint.py  sampling.py
src/boltzmann_generators/training/: __init__.py  loss_strategies.py  trainer.py
tests/: conftest.py  test_analysis.py  test_base.py  test_cnf.py  test_energies.py  test_integration.py  test_io.py  test_losses.py  test_mcmc.py  test_periodic.py  test_realnvp.py  test_sampling.py  test_services.py  test_train.py  test_trainer.py
theory/: 01_statistical_mechanics.md  02_normalizing_flows.md  03_boltzmann_generators.md  04_flow_matching.md  05_transferable_bg.md
