[project]
name = "boltzmann-generators"
version = "0.1.0"
description = "Personal study repo for Boltzmann Generators (Noé & Wu 2019) and Transferable BG (Klein & Noé 2024). Theory notes + from-scratch PyTorch implementation."
requires-python = ">=3.11"
dependencies = [
    "jupyterlab>=4.5.8",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "torch>=2.12.0",
    "tqdm>=4.68.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bg"]
