[project]
name = "boltzmann-generators"
version = "0.2.0"
description = "Boltzmann Generators in PyTorch: flows, energies, losses, and sampling utilities."
readme = "README.md"
license = "MIT"
authors = [{ name = "Manu Martin" }]
keywords = ["boltzmann-generators", "normalizing-flows", "molecular-dynamics", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "torch>=2.0",
    "tqdm>=4.60",
]

[project.urls]
Homepage = "https://github.com/manumartinm/boltzmann-generators"
Repository = "https://github.com/manumartinm/boltzmann-generators"
Issues = "https://github.com/manumartinm/boltzmann-generators/issues"
Changelog = "https://github.com/manumartinm/boltzmann-generators/blob/main/CHANGELOG.md"

[project.optional-dependencies]
notebook = [
    "jupyterlab>=4.0",
    "matplotlib>=3.8",
    "pandas>=2.0",
    "nbconvert>=7.0",
]
dev = [
    "build>=1.2",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "twine>=5.0",
]
ode = ["torchdiffeq>=0.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/boltzmann_generators"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=boltzmann_generators --cov-report=term-missing --cov-fail-under=75"

[tool.coverage.run]
source = ["boltzmann_generators"]
branch = true
omit = [
    "*/extensions/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.11"
packages = ["boltzmann_generators"]
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "boltzmann_generators.flows.cnf"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "boltzmann_generators.flows.base",
    "boltzmann_generators.flows.coupling",
    "boltzmann_generators.flows.realnvp",
]
ignore_errors = true

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    "notebooks",
    "examples",
    "references",
    ".venv",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
